# underboss

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/underboss/: __init__.py  db.py  errors.py  failure.py  maintenance.py  scheduler.py  schema.py  sql.py  types.py  underboss.py  worker.py
tests/: conftest.py  test_payload.py  test_scheduler.py  test_schema.py  test_sql.py
tests/integration/: test_admin.py  test_dead_letter.py  test_group_concurrency.py  test_maintenance.py  test_producer.py  test_scheduler.py  test_transactional.py  test_worker.py
