[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "underboss"
version = "0.1.0"
description = "An async, Postgres-backed job queue for Python — a port of pg-boss."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jonathan Borduas" }]
keywords = [
  "postgres",
  "postgresql",
  "cockroachdb",
  "queue",
  "job-queue",
  "task-queue",
  "background-jobs",
  "pg-boss",
  "asyncpg",
  "asyncio",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
dependencies = [
  "asyncpg>=0.30",
  "croniter>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "asyncpg-stubs>=0.30",
]

[project.urls]
Homepage = "https://github.com/jobordu/underboss"
Repository = "https://github.com/jobordu/underboss"
Issues = "https://github.com/jobordu/underboss/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/underboss"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src/underboss"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["croniter.*"]
ignore_missing_imports = true
